--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon backend/server",
-    "prod": "SET NODE_ENV=PRODUCTION && nodemon backend/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT && nodemon backend/server.js",
-
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm start --prefix frontend",
+    "start": "concurrently \"npm run prod\" \"npm run client\"",
+    "prod": "SET NODE_ENV=PRODUCTION&&nodemon backend/server.js",
+    "dev": "SET NODE_ENV=DEVELOPMENT&&nodemon backend/server.js",
+    "seed": "node backend/seeder.js"
   },
   "author": "Neeraj Saini",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   }
 }
